tests/format/link/invalid/elements/base-file.bst
kind: import

sources:
- kind: local
  path: .
